# araft

./: .gitignore  Cargo.toml  LICENSE
araft/: Cargo.toml  build.rs
araft/proto/: internal.proto  management.proto  raft.proto
araft/src/: actor.rs  comm.rs  core.rs  interface.rs  lib.rs  log.rs  metal.rs  state.rs
araft/src/core/: comm.rs  interface.rs  metal.rs  state.rs  storage.rs
tests/main-test/: Cargo.toml
tests/test-client/: Cargo.toml
tests/test-client/src/: main.rs
tests/test-node/: Cargo.toml
tests/test-node/src/: main.rs
