[package]
name = "araft"
license = "MIT"
description = "An async raft implementation based on tokio + tonic"
homepage = "https://github.com/s10db/araft"
repository = "https://github.com/s10db/araft"
readme = "README.md"
version = "0.1.0"
edition = "2021"
build = "./build.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
nanoid = "0.4.0"
config = "0.14"
argh = "0.1"
prost = "0.12"
tonic = "0.11"
ahash = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand ={ version = "0.8"}

[build-dependencies]
tonic-build = "0.11"
